--- a/MySQL/docker-compose.yml
+++ b/MySQL/docker-compose.yml
@@ -1,5 +1,16 @@
 version: "3.9"
 services:
+  python:
+    image: python:3.11.2
+    ports:
+      - "80:80"
+    volumes:
+      - type: bind
+        source: .
+        target: /scripts
+    command: tail -f /dev/null
+    links:
+      - "database"
   database:
     build: .
     ports:
